# topdrawersoccer-sdk

./: .coveragerc  .flake8  .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/topdrawersoccer_sdk/: __init__.py  skeleton.py
tests/: conftest.py  test_skeleton.py
tests/integration/page/: test_conference_commitments_page.py  test_conferences_page.py  test_school_commitments_page.py  test_teams_page.py
tests/unit/: test_conference.py  test_division.py
topdrawersoccer_sdk/: conference.py  mapping.py
topdrawersoccer_sdk/model/: club.py  commitment.py  conference.py  player.py  school.py  team.py
topdrawersoccer_sdk/models/: conference.py
topdrawersoccer_sdk/page/: coach.py  college.py  conference.py  team.py
