[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topdrawersoccer-sdk"
version = "0.0.0"
authors = [
  { name="Omar Crosby", email="omar.crosby@gmail.com" },
]
description = "A python module for scraping TopDrawerSoccer."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]
keywords = [
    "soccer",
    "scraping"
]

[project.urls]
"Homepage" = "https://github.com/ocrosby/topdrawersoccer-sdk"
"Bug Tracker" = "https://github.com/ocrosby/topdrawersoccer-sdk/issues"

[tool.semantic_release]
version_source = "commit"
version_variable = [
    "topdrawersoccer_sdk/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:project.version"
]
major_on_zero = true
branch = "main"
upload_to_pypi = true
upload_to_release = false
commit_subject = "chore: release {version} [skip ci] ***NO_CI***"
build_command = "pip install --upgrade pip && pip install poetry && poetry install && poetry build"